chore: add favicon provider workspace setting
