# server/route/api/v1/workspace_service.go
@@ -34,6 +34,7 @@ func (s *APIV2Service) GetWorkspaceProfile(ctx context.Context, _ *apiv1pb.GetWo
 		profile.EnableSignup = setting.GetEnableSignup()
 		profile.CustomStyle = setting.GetCustomStyle()
 		profile.CustomScript = setting.GetCustomScript()
+		profile.FaviconProvider = setting.GetFaviconProvider()
 	}
 	return &apiv1pb.GetWorkspaceProfileResponse{
 		Profile: profile,
@@ -70,6 +71,8 @@ func (s *APIV2Service) GetWorkspaceSetting(ctx context.Context, _ *apiv1pb.GetWo
 			workspaceSetting.CustomScript = v.GetCustomScript()
 		} else if v.Key == storepb.WorkspaceSettingKey_WORKSPACE_SETTING_DEFAULT_VISIBILITY {
 			workspaceSetting.DefaultVisibility = apiv1pb.Visibility(v.GetDefaultVisibility())
+		} else if v.Key == storepb.WorkspaceSettingKey_WORKSPACE_SETTING_FAVICON_PROVIDER {
+			workspaceSetting.FaviconProvider = v.GetFaviconProvider()
 		} else if isAdmin {
 			// For some settings, only admin can get the value.
 			if v.Key == storepb.WorkspaceSettingKey_WORKSPACE_SETTING_LICENSE_KEY {
@@ -138,6 +141,15 @@ func (s *APIV2Service) UpdateWorkspaceSetting(ctx context.Context, request *apiv
 				Key: storepb.WorkspaceSettingKey_WORKSPACE_SETTING_DEFAULT_VISIBILITY,
 				Value: &storepb.WorkspaceSetting_DefaultVisibility{
 					DefaultVisibility: storepb.Visibility(request.Setting.DefaultVisibility),
+				},
+			}); err != nil {
+				return nil, status.Errorf(codes.Internal, "failed to update workspace setting: %v", err)
+			}
+		} else if path == "favicon_provider" {
+			if _, err := s.Store.UpsertWorkspaceSetting(ctx, &storepb.WorkspaceSetting{
+				Key: storepb.WorkspaceSettingKey_WORKSPACE_SETTING_FAVICON_PROVIDER,
+				Value: &storepb.WorkspaceSetting_FaviconProvider{
+					FaviconProvider: request.Setting.FaviconProvider,
 				},
 			}); err != nil {
 				return nil, status.Errorf(codes.Internal, "failed to update workspace setting: %v", err)
